  (``egg:Paste#registry``).

* ``paste.request.HeaderDict`` fixed to know that ``Content-Length``
  maps to ``CONTENT_LENGTH``.

* Can use ``paste.urlparser.StaticURLParser`` with sub-instances other
  than ``paste.fileapp.FileApp`` (if you subclass and override
  ``make_app``)

* ``paste.fixture.TestApp.get(status=X)`` takes a list of allowed
  status codes for ``X``.

In paste.wsgiwrappers
~~~~~~~~~~~~~~~~~~~~~

* ``paste.wsgiwrappers.WSGIRequest`` can now optionally decode form
  parameters to unicode when it has a ``charset`` value set.

* Deprecated the ``paste.wsgiwrappers.settings`` StackedObjectProxy
  dictionary for ``paste.wsgiwrappers.WSGIResponse.defaults``.

In paste.httpserver
~~~~~~~~~~~~~~~~~~~

* Regression in 1.1 fixed, where Paste's HTTP server would drop
  trailing slashes from paths.

* ``paste.httpserver`` now puts a key in the environment when using a
  thread pool that allows you to track the thread pool and see any
  wedged threads.  ``egg:Paste#watch_threads`` is an application that
  can display this information.

* ``paste.httpserver`` now accepts all request methods, not just
  ``GET``, ``PUT``, etc.  (Methods like ``MKCOL`` were previously
  rejected.)

* ``paste.httpserver`` has a ``wsgi.input`` that now does not block if
  you try to read past the end (it is limited to returning the number
  of bytes given in ``Content-Length``).  Double-reading from
  ``wsgi.input`` won't give you the same data, but it won't cause
  blocking.

1.1.1
-----

* Fixed major issue with serving static files on Windows (a regression
  in Paste 1.1 where most static files would return 404 Not Found).

* Fixed ``parse_dict_querystring`` returning empty dicts instead of
  ``MultiDict``\ s.

* Added ``paste.config``, a rewrite of ``paste.deploy.config`` using
  ``paste.registry``. This version of ``ConfigMiddleware`` will
  enable use of ``paste.config.CONFIG`` within the ``EvalException``
  interactive debugger.
